--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,21 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--base: "#faf4ed";
+	--surface: "#fffaf3";
+	--overlay: "#f2e9e1";
+	--muted: "#9893a5";
+	--subtle: "#797593";
+	--text: "#575279";
+	--love: "#b4637a";
+	--gold: "#ea9d34";
+	--rose: "#d7827e";
+	--pine: "#286983";
+	--foam: "#56949f";
+	--iris: "#907aa9";
+	--highlight_low: "#f4ede8";
+	--highlight_med: "#dfdad9";
+	--highlight_high: "#cecacd";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,10 +27,18 @@
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+
+  h2 {
+    @apply text-xl;
+  }
+
+  a {
+    @apply text-gold;
+  }
 }
 
 @layer utilities {
